--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,7 +48,7 @@ build_script:
       svn checkout https://svn.blender.org/svnroot/bf-blender/trunk/lib/win64_vc15 ../lib/win64_vc15 >>..\..\xx.txt
       make.bat full nobuild
 after_build:
-  - '7z a -mqs -ms=on %APPVEYOR_BUILD_FOLDER%\bld\blender\build_windows_Full_x64_vc16_Release %APPVEYOR_BUILD_FOLDER%\biud.7z'
+  - '7z a %APPVEYOR_BUILD_FOLDER%\biud.7z' -mqs -ms=on %APPVEYOR_BUILD_FOLDER%\bld\blender\build_windows_Full_x64_vc16_Release 
   
 artifacts:
   -
