--- a/appveyor.yml
+++ b/appveyor.yml
@@ -46,9 +46,10 @@ build_script:
       git clone git://git.blender.org/blender.git %APPVEYOR_BUILD_FOLDER%\bld\blender
 
       svn checkout https://svn.blender.org/svnroot/bf-blender/trunk/lib/win64_vc15 ../lib/win64_vc15 >>..\..\xx.txt
-      make.bat full nobuild
+      make.bat
 after_build:
-  - '7z a %APPVEYOR_BUILD_FOLDER%\biud.7z -mqs -ms=on %APPVEYOR_BUILD_FOLDER%\bld\build_windows_Full_x64_vc16_Release\'
+   - '7z a %APPVEYOR_BUILD_FOLDER%\biud.7z -mqs -ms=on -ir!%APPVEYOR_BUILD_FOLDER%\bld\*.obj -ir!%APPVEYOR_BUILD_FOLDER%\bld\*.exe -ir!%APPVEYOR_BUILD_FOLDER%\bld\*.pdb'
+#  - '7z a %APPVEYOR_BUILD_FOLDER%\biud.7z -mqs -ms=on %APPVEYOR_BUILD_FOLDER%\bld\build_windows_Full_x64_vc16_Release\'
   
 artifacts:
   -
