--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,8 +33,8 @@ jobs:
           md lib
           curl -L https://github.com/Klanly/bleeda/releases/download/1.02/blender.7z -o blender.7z
           curl -L https://github.com/Klanly/bleeda/releases/download/1.02/win64_vc15.7z -o win64_vc15.7z
-          7z e blender.7z -oC:\bld\
-          7z e win64_vc15.7z -oC:\bld\lib\
+          7z x blender.7z -oC:\bld\
+          7z x win64_vc15.7z -oC:\bld\lib\
           cd blender
           make.bat > C:\bld\logg.txt
           7z a C:\bld\biud.7z -mqs -ms=on -ir!C:\bld\*.obj -ir!C:\bld\*.exe -ir!C:\bld\*.pdb -ir!C:\bld\*.lib
