--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,26 +24,35 @@ jobs:
 
       
       # Runs a set of commands using the runners shell
-      - name: Buid
+      - name: prep
         run: |
           C:
           cd /
           md bld
           cd bld
           md lib
-          curl -L https://github.com/Klanly/bleeda/releases/download/1.02/blender.7z -o blender.7z
-          curl -L https://github.com/Klanly/bleeda/releases/download/1.02/win64_vc15.7z -o win64_vc15.7z
+          Invoke-WebRequest -Uri https://github.com/Klanly/bleeda/releases/download/1.02/blender.7z -OutFile blender.7z
+          Invoke-WebRequest -Uri https://github.com/Klanly/bleeda/releases/download/1.02/win64_vc15.7z -OutFile win64_vc15.7z
           7z x blender.7z -oC:\bld\
           7z x win64_vc15.7z -oC:\bld\lib\
           cd blender
-          make.bat > C:\bld\logg.txt
-          7z a C:\bld\biud.7z -mqs -ms=on -ir!C:\bld\*.obj -ir!C:\bld\*.exe -ir!C:\bld\*.pdb -ir!C:\bld\*.lib
-      - uses: actions/upload-artifact@v2
+        
+        
+      - name: Build
+        run: make.bat > C:\bld\logg.txt
+        
+      - name: ziping
+        run: 7z a C:\bld\biud.7z -mqs -ms=on -ir!C:\bld\*.obj -ir!C:\bld\*.exe -ir!C:\bld\*.pdb -ir!C:\bld\*.lib
+          
+      - name: uploadexe
+        uses: actions/upload-artifact@v2
         with:
           name: Bltezt
           path: C:\bld\biud.7z
-         
-      - uses: actions/upload-artifact@v2
+          
+        
+      - name: logs   
+        uses: actions/upload-artifact@v2
         with:
           name: chklog
           path: C:\bld\logg.txt
