--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,10 @@ jobs:
           md lib
           Invoke-WebRequest -Uri https://github.com/Klanly/bleeda/releases/download/1.02/blender.7z -OutFile blender.7z
           Invoke-WebRequest -Uri https://github.com/Klanly/bleeda/releases/download/1.02/win64_vc15.7z -OutFile win64_vc15.7z
-          7z x blender.7z -oC:\bld\
-          7z x win64_vc15.7z -oC:\bld\lib\
-          cd blender
+          7z x blender.7z -oC:\bld\ -spf
+          7z x win64_vc15.7z -oC:\bld\lib\ -spf
+          dir C:\bld\blender C:\bld\logg.txt
+          cd C:\bld\blender
         
         
       - name: Build
