--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,8 +35,14 @@ jobs:
           Invoke-WebRequest -Uri https://github.com/Klanly/bleeda/releases/download/1.02/win64_vc15.7z -OutFile win64_vc15.7z
           7z x blender.7z -oC:\bld\ -spf
           7z x win64_vc15.7z -oC:\bld\lib\ -spf
+          dir C:\bld > C:\bld\logg.txt
           cd C:\bld\blender
         
+      - name: logs1
+        uses: actions/upload-artifact@v2
+        with:
+          name: cdlog
+          path: C:\bld\logg.txt
         
       - name: Build
         run: make.bat > C:\bld\logg.txt
