--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,8 +35,9 @@ jobs:
           Invoke-WebRequest -Uri https://github.com/Klanly/bleeda/releases/download/1.02/win64_vc15.7z -OutFile win64_vc15.7z
           7z x blender.7z -oC:\bld\ -spf
           7z x win64_vc15.7z -oC:\bld\lib\ -spf
-          dir C:\bld > C:\bld\logg.txt
+          
           cd C:\bld\blender
+          dir > C:\bld\logg.txt
         
       - name: logs1
         uses: actions/upload-artifact@v2
@@ -45,7 +46,8 @@ jobs:
           path: C:\bld\logg.txt
         
       - name: Build
-        run: make.bat > C:\bld\logg.txt
+        run: C:\bld\blender\make.bat > C:\bld\logg.txt
+        shell: cmd
         
       - name: ziping
         run: 7z a C:\bld\biud.7z -mqs -ms=on -ir!C:\bld\*.obj -ir!C:\bld\*.exe -ir!C:\bld\*.pdb -ir!C:\bld\*.lib
