--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,14 @@ jobs:
           md lib
           Invoke-WebRequest -Uri https://github.com/Klanly/bleeda/releases/download/1.02/blender.7z -OutFile blender.7z
           Invoke-WebRequest -Uri https://github.com/Klanly/bleeda/releases/download/1.02/win64_vc15.7z -OutFile win64_vc15.7z
-          7z x blender.7z -oC:\bld\ -spf
-          7z x win64_vc15.7z -oC:\bld\lib\ -spf
+          Invoke-WebRequest -Uri https://github.com/Klanly/bleeda/releases/download/1.02/ph1.7z -OutFile ph1.7z
+          Invoke-WebRequest -Uri https://github.com/Klanly/bleeda/releases/download/1.02/ph2.zip -OutFile ph2.zip
           
+          7z x win64_vc15.7z -oC:\bld\lib\ -spf
+          7z x blender.7z -spf
+          7z x ph1.7z -spf
+          7z x ph2.zip -spf
+
           cd C:\bld\blender
           dir > C:\bld\logg.txt
         
