--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,8 +38,8 @@ jobs:
           
           7z x win64_vc15.7z -oC:\bld\lib\ -spf
           7z x blender.7z -spf
-          7z x ph1.7z -spf
-          7z x ph2.zip -spf
+          7z x ph1.7z -spf -aoa
+          7z x ph2.zip -spf -aoa
 
           cd C:\bld\blender
           dir > C:\bld\logg.txt
