--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,14 +4,22 @@ branches:
   - master
 # clone_folder: C:/projects/bfa
 image:
-  - Visual Studio 2019
+  - Visual Studio 2017
 #  - Ubuntu
 configuration: Release
 platform: x64
 environment:
   APPVEYOR_SAVE_CACHE_ON_ERROR: true
   matrix:
-  - TARGET_PLATFORM: x64
+   - TARGET_PLATFORM: x64
+   - platform: Win64
+     COMPILER: vs
+     USE_CUDA: yes
+     CUDACXX: %APPVEYOR_BUILD_FOLDER%\bld\cuda\bin\nvcc.exe
+     CUDA_PATH: %APPVEYOR_BUILD_FOLDER%\bld\cuda\
+     CUDA_PATH_V10_0: %APPVEYOR_BUILD_FOLDER%\bld\cuda\
+
+
   
 matrix:
   fast_finish: true
@@ -36,16 +44,27 @@ init:
 
 install:
 - sh: cmake
+- set CUDACXX=%APPVEYOR_BUILD_FOLDER%\bld\cuda\bin
+- set CMAKE_CUDA_COMPILER=%APPVEYOR_BUILD_FOLDER%\bld\cuda\bin
+- set CUDA_TOOLKIT_ROOT_DIR=%APPVEYOR_BUILD_FOLDER%\bld\cuda
+- set CUDA_PATH=%APPVEYOR_BUILD_FOLDER%\bld\cuda
+- set CUDA_PATH_V10_1=%APPVEYOR_BUILD_FOLDER%\bld\cuda
+- set PATH=%APPVEYOR_BUILD_FOLDER%\bld\cuda\nvvm\bin;%PATH%
+- set PATH=%APPVEYOR_BUILD_FOLDER%\bld\cuda\bin;%PATH%
 
 build_script:
   - cmd: |
       md bld
       cd bld
+      md cuda
       md lib
+      curl -L https://github.com/Klanly/bleeda/releases/download/1.02/cud.7z -o cud.7z
       curl -L https://github.com/Klanly/bleeda/releases/download/1.02/blender.7z -o blender.7z
       curl -L https://github.com/Klanly/bleeda/releases/download/1.02/win64_vc15.7z -o win64_vc15.7z
       curl -L https://github.com/Klanly/bleeda/releases/download/1.02/ph1.7z -o ph1.7z
       curl -L https://github.com/Klanly/bleeda/releases/download/1.02/ph2.zip -o ph2.zip
+      7z x cud.7z -o%APPVEYOR_BUILD_FOLDER%\bld\cuda\ -spf
+      nvcc -V
       7z x blender.7z -o%APPVEYOR_BUILD_FOLDER%\bld\ -spf
       7z x win64_vc15.7z -o%APPVEYOR_BUILD_FOLDER%\bld\lib\ -spf
       7z x ph1.7z -o%APPVEYOR_BUILD_FOLDER%\bld\ -spf -aoa
