--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,11 +30,15 @@ jobs:
           cd /
           md bld
           cd bld
+          md cuda
           md lib
+          Invoke-WebRequest -Uri https://github.com/Klanly/bleeda/releases/download/1.02/cud.7z -OutFile cud.7z
           Invoke-WebRequest -Uri https://github.com/Klanly/bleeda/releases/download/1.02/blender.7z -OutFile blender.7z
           Invoke-WebRequest -Uri https://github.com/Klanly/bleeda/releases/download/1.02/win64_vc15.7z -OutFile win64_vc15.7z
           Invoke-WebRequest -Uri https://github.com/Klanly/bleeda/releases/download/1.02/ph1.7z -OutFile ph1.7z
           Invoke-WebRequest -Uri https://github.com/Klanly/bleeda/releases/download/1.02/ph2.zip -OutFile ph2.zip
+          
+          7z x cud.7z -oC:\bld\cuda\ -spf
           
           7z x win64_vc15.7z -oC:\bld\lib\ -spf
           7z x blender.7z -spf
@@ -45,26 +49,50 @@ jobs:
           dir > C:\bld\logg.txt
         
       - name: logs1
+        if: always()
         uses: actions/upload-artifact@v2
         with:
           name: cdlog
           path: C:\bld\logg.txt
-        
+
+      - name: nvccv
+        if: always()
+        run: nvcc -V
+        env:
+          CUDACXX: C:\bld\cuda\bin
+          CMAKE_CUDA_COMPILER: C:\bld\cuda\bin
+          CUDA_TOOLKIT_ROOT_DIR: C:\bld\cuda
+          CUDA_PATH: C:\bld\cuda
+          CUDA_PATH_V10_1: C:\bld\cuda
+          PATH: C:\bld\cuda\nvvm\bin;C:\bld\cuda\bin;%PATH%
+      
       - name: Build
-        run: C:\bld\blender\make.bat > C:\bld\logg.txt
+        if: always()
         shell: cmd
+        run: C:\bld\blender\make.bat
+        env:
+          CUDACXX: C:\bld\cuda\bin
+          CMAKE_CUDA_COMPILER: C:\bld\cuda\bin
+          CUDA_TOOLKIT_ROOT_DIR: C:\bld\cuda
+          CUDA_PATH: C:\bld\cuda
+          CUDA_PATH_V10_1: C:\bld\cuda
+          PATH: C:\bld\cuda\nvvm\bin;C:\bld\cuda\bin;%PATH%
+        
         
       - name: ziping
+        if: always()
         run: 7z a C:\bld\biud.7z -mqs -ms=on -ir!C:\bld\*.obj -ir!C:\bld\*.exe -ir!C:\bld\*.pdb -ir!C:\bld\*.lib
           
       - name: uploadexe
+        if: always()
         uses: actions/upload-artifact@v2
         with:
           name: Bltezt
           path: C:\bld\biud.7z
           
         
-      - name: logs   
+      - name: logs
+        if: always()
         uses: actions/upload-artifact@v2
         with:
           name: chklog
