--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
       - name: Build
         if: always()
         shell: cmd
-        run: C:\bld\blender\make.bat
+        run: C:\bld\blender\make.bat bpy
         env:
           CUDACXX: C:\bld\cuda\bin
           CMAKE_CUDA_COMPILER: C:\bld\cuda\bin
@@ -101,8 +101,9 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: Bltezt
-          path: C:\bld\biud.7z
+          title: Bltezt
+            - files:[C:\bld\biud.7z]
+          
           
         
       - name: logs
