--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - uses: actions/checkout@v2
       # Runs a set of commands using the runners shell
       - name: prep
         run: |
@@ -54,13 +55,14 @@ jobs:
           name: cdlog
           path: C:\bld\logg.txt
          
+      # C:\bld\build_windows_x64_vc16_Release
       - name: mkklink
         if: always()
         shell: cmd
         run: |
           mklink /J "C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v10.2" C:\bld\cuda
           mklink /J "C:\zwant" C:\bld\build_windows_Bpy_x64_vc16_Release
-          # C:\bld\build_windows_x64_vc16_Release
+          
         
       - name: nvccv
         if: always()
