--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,8 +102,8 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          title: Bltezt
-            - files:[C:\bld\biud.7z]
+          name: exacu
+          path: C:\bld\biud.7z
           
           
         
